# DOOM

./: .gitignore  DOOM_Panzer.sln  DOOM_Panzer.vcproj  Doom_Panzer.cbp  PanzerDoom readme.txt  brightness_levels.txt  default.cfg  version_history.txt
linuxdoom/: CMakeLists.txt  am_map.c  d_french.h  d_items.c  d_main.c  d_net.c  d_net.h  d_player.h  d_textur.h  d_ticcmd.h  doomdata.h  doomdef.h  dstrings.c  f_finale.c  f_finale.h  f_wipe.h  g_game.c  hu_lib.c  hu_stuff.c  hu_stuff.h  i_main.cpp  i_net.c  i_net_impl.h  i_sound.c  i_sound.cpp  i_sound.h  i_system.c  i_video.cpp  i_video.h  info.h  m_argv.c  m_bbox.c  m_bbox.h  m_cheat.h  m_fixed.c  m_fixed.h  m_menu.c  m_menu.h  m_misc.h  m_random.h  (+45 more)
linuxdoom-1.10/: CMakeLists.txt  am_map.c  am_map.h  d_englsh.h  d_event.h  d_items.h  d_main.c  d_main.h  d_net.c  d_think.h  doomdata.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  doomtype.h  dstrings.c  dstrings.h  f_finale.c  f_wipe.c  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  i_net.c  i_net.h  i_net_impl.c  i_net_impl.h  i_sound.c  i_sound.h  i_system.c  i_system.h  i_video.c  i_video.h  info.c  m_argv.c  m_argv.h  m_cheat.c  (+62 more)
linuxdoom-1.10/r_panzer/: rp_data.c  rp_data.h  rp_defs.h  rp_main.c  rp_main.h  rp_plane.c  rp_plane.h  rp_video.c  rp_video.h
linuxdoom/qt/: i_main.cpp  i_sound.cpp  i_system.c  i_video.cpp
linuxdoom/r_panzer/: rp_data.h  rp_main.c  rp_main.h  rp_video.c
linuxdoom/sdl/: i_main.c  i_sound.c  i_video.c
